syntax = "proto3";
package wormhole_foundation.wormchain.wormhole;

option go_package = "github.com/wormhole-foundation/wormchain/x/wormhole/types";

message EventGuardianSetUpdate{
  uint32 old_index = 1;
  uint32 new_index = 2;
}

message EventPostedMessage{
  bytes emitter = 1;
  uint64 sequence = 2;
  uint32 nonce = 3;
  uint64 time = 4;
  bytes payload = 5;
}

message EventGuardianRegistered{
  bytes guardian_key = 1;
  bytes validator_key = 2;
}

message EventConsensusSetUpdate{
  uint32 old_index = 1;
  uint32 new_index = 2;
}
